# ultron

./: .gitignore  LICENSE  README.md  config.yaml  models.yaml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BUILDS.md  COGNITIVE_ARCHITECTURE.md  FUSION.md  INSTALL.md  MONAD_BLUEPRINT.md  ORCHESTRATION.md  PUSH_TO_GITHUB.md  SELF_IMPROVEMENT.md  USAGE.md  USB_INSTALL.md  WEBAPP.md
docs/cognition/: PHASE1_CONSCIOUSNESS.md
installer/: README.md  download_models.py  download_python.py  install_to_usb.bat  install_to_usb.py  install_to_usb.sh  install_wizard.py
launcher/: monad-cli.bat  monad.bat  start-webapp.bat  start-webapp.sh
models/: .gitkeep
monad/: __init__.py
monad/api/: __init__.py  server.py
monad/chat/: __init__.py  chat_engine.py  conversation.py
monad/cognition/: README.md  __init__.py  core.py  executive.py  perception.py  self_model.py
monad/config/: __init__.py  manager.py
monad/core/: __init__.py  application.py  container.py  environment.py  logger.py  resource_manager.py
monad/evolution/: __init__.py  evolvable.py  log.py  manager.py  proposer.py  rollback.py  sandbox.py  updater.py
monad/inference/: __init__.py  interfaces.py  llama_cpp_provider.py  manager.py
monad/memory/: __init__.py  retrieval.py  store.py  stubs.py  vector.py
monad/models/: __init__.py  exceptions.py  interfaces.py  loader.py  manager.py  metadata.py  registry.py
monad/orchestration/: __init__.py  adaptive.py  cache.py  confidence.py  executor.py  orchestrator.py  strategies.py  streaming.py  synthesizer.py
monad/plugins/: __init__.py  examples.py  manager.py
monad/policy/: __init__.py  gate.py  stubs.py
scripts/: dev_bootstrap.py  push_to_github.ps1  push_to_github.sh
tests/: test_api.py  test_cognition.py  test_config.py  test_container.py  test_evolution.py  test_fusion.py  test_memory.py  test_orchestration.py  test_policy.py  test_prompts.py  test_router.py  test_scheduler.py  test_streaming_cache_adaptive.py  test_tools.py
webapp/: .env.example  .gitignore  README.md  next.config.mjs  package.json  preview-chat.html  preview-installer.html  preview.html  tailwind.config.ts
(+61 files in other folders)
