[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monad-ultron"
version = "0.1.0"
description = "Portable, modular, local AI orchestration platform that runs from a USB drive"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Monad-Ultron Project Contributors" }
]
keywords = ["ai", "llm", "orchestration", "portable", "local-ai", "usb", "llama-cpp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "pydantic>=2.7.0",
    "psutil>=5.9.8",
]

[project.optional-dependencies]
inference = [
    "llama-cpp-python>=0.2.90",
]
memory = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
full = [
    "monad-ultron[inference,memory,api,dev]",
]

[project.scripts]
monad = "monad.ui.cli:app"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/Monad-Ultron"
Repository = "https://github.com/YOUR_USERNAME/Monad-Ultron"
Documentation = "https://github.com/YOUR_USERNAME/Monad-Ultron/blob/main/docs/ARCHITECTURE.md"
Issues = "https://github.com/YOUR_USERNAME/Monad-Ultron/issues"

[tool.setuptools.packages.find]
include = ["monad*"]
exclude = ["tests*", "docs*", "scripts*", "installer*", "launcher*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
